# AI-News-Dashboard

./: .env.example  .gitignore  DEMO.md  README.md  app.py  config.py  pyproject.toml  requirements.txt  utils.py
config/: sources.yaml
reports/: .gitignore
src/newsintel/: __init__.py  app.py  crew.py  schemas.py
src/newsintel/tools/: __init__.py  analyzer.py  scraper.py  search.py
tests/: __init__.py  test_schemas.py
